# ego

./: .gitignore  Cargo.toml  README.md  TODO.md  config.json  config.toml
ego-cli/: Cargo.toml  example.json
ego-cli/src/: main.rs
ego-web/: Cargo.toml  client.rb
ego-web/src/: main.rs
examples/: opt.rs
examples/substrate_configuration/: mod.rs
src/: cppn.rs  domain_graph.rs  driver.rs  export.rs  fitness.rs  fitness_graphsimilarity.rs  genome.rs  graph.rs  lib.rs  mating.rs  prob.rs  range.rs  substrate.rs  substrate_configuration.rs  weight.rs
src/network_builder/: dot.rs  gml.rs  mod.rs  viz.rs
src/placement/: mod.rs
