[package]
name = "ego"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/ego"
description = "Evolutionary Graph Optimizer"
keywords = ["evolution", "neuro", "net", "algorithm", "cppn"]

include = ["src/*.rs", "examples/*.rs", "examples/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]

rand = "0.4"
log = "0.4"
cppn = { version = "0.3", features = ["serde"] }
acyclic-network = "0.2"
graph-neighbor-matching = "0.7"
nsga2 = {git = "https://github.com/mneumann/nsga2-rs"}
hamming = "0.1"
primal-bit = "0.2"
closed01 = "0.4"
petgraph = "0.4"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
