[package]
name = "ego-cli"
version = "0.1.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/ego"

[dependencies]
ego = { path = "..", version = "0.0.1" }
time = "0.1"
serde_json = "1.0"
nsga2 = {git = "https://github.com/mneumann/nsga2-rs"}
serde = "1.0"
serde_derive = "1.0"
rand = "0.4"
