[package]
name = "ego-web"
version = "0.1.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/ego"

[dependencies]
ego = { path = "..", version = "0.0.1" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.4"
futures = "~0.1.11"
actix-web = "0.3"
